fixed layout shift1

--- a/src/_includes/scss/utils/_divider.scss
+++ b/src/_includes/scss/utils/_divider.scss
@@ -4,7 +4,6 @@
 // Utility: Divider
 hr {
   margin: map.get($divider, spacing) 0;
-  overflow: visible;
   border: 0;
   border-top: map.get($divider, border);
 }
